[knewfilemenu] Fix error handling when creating a folder that already exists

And setSelectDirWhenAlreadyExist is not set

In that case we want to do the error handling (and not assert)

BUG: 482145